<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>minimal_handeye_ros2</name>
  <version>0.0.0</version>
  <description>Minimal Hand-Eye Calibration Node for ROS 2</description>
  <maintainer email="zixingjiang@outlook.com">zixingjiang</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>std_srvs</depend>
  <depend>tf2_ros</depend>
  <depend>rcl_interfaces</depend>
  <depend>python3-numpy</depend>
  <depend>python3-transforms3d</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>